# ai-exrs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: pixel_format_conversion.rs  profiling.rs  read.rs  write.rs
examples/: 0a_write_rgba.rs  0b_read_meta.rs  0c_read_rgba.rs  1a_write_rgba_with_metadata.rs  1b_convert_exr_to_png.rs  2_rgba_adjust_exposure.rs  3a_write_dynamic_channels_with_metadata.rs  3b_read_all_channels_with_metadata.rs  4a_write_custom_fixed_channels.rs  4b_read_custom_fixed_channels.rs  5a_write_multiple_layers.rs  5b_extract_exr_layers_as_pngs.rs  5c_write_mip_maps.rs  5d_write_legacy_layers.rs  6_extract_mip_map_pngs.rs  7_crop_alpha_any_image.rs  7_crop_alpha_rgba.rs  7_write_raw_blocks.rs  8_read_raw_blocks.rs
exrs-wasm/: Cargo.toml
exrs-wasm/src/: lib.rs
src/: error.rs  io.rs  lib.rs  math.rs
src/block/: chunk.rs  lines.rs  mod.rs  reader.rs  writer.rs
src/compression/: mod.rs  pxr24.rs  rle.rs
src/compression/b44/: mod.rs
src/compression/piz/: huffman.rs  mod.rs  wavelet.rs
src/image/: channel_groups.rs  crop.rs  mod.rs  pixel_vec.rs
src/image/read/: image.rs  mod.rs  specific_channels.rs
src/image/write/: channels.rs  layers.rs  mod.rs
src/meta/: attribute.rs  header.rs  mod.rs
tests/: across_compression.rs  dev.rs  fuzz.rs  roundtrip.rs
