[package]
name = "ai-exr"
description = "Read and write OpenEXR files without any unsafe code"
keywords = ["exr", "openexr", "file", "binary", "io"]
categories = ["encoding", "filesystem", "graphics", "multimedia"]

version = "1.74.0"
edition = "2018"
authors = ["johannesvollmer <contact@johannesvollmer.com>"]

repository = "https://github.com/johannesvollmer/exrs"
readme = "README.md"
license = "BSD-3-Clause"
exclude = [ "specification/*", "specification/**", "tests/images/*", "tests/images/**" ]
rust-version = "1.61.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false

[dependencies]
# generic binary serialization
lebe = { package = "ai-lebe", version = "^0.5.2" }

half = { version = "2.1.0", default-features = false, features = ["alloc"] }  # 16 bit float pixel data type
bit_field = "^0.10.1"          # exr file version bit flags

# zip compression for pxr24
miniz_oxide = { version = "0.9.0", default-features = false, features = ["with-alloc"] }

# make cache-friendly allocations        TODO profile if smallvec is really an improvement!
smallvec = { version = "^1.7.0", default-features = false }

rayon-core = { version = "^1.11.0", optional = true }         # threading for parallel compression
zune-inflate = { package = "ai-zune-inflate", version = "^0.2.54", default-features = false, features = ["zlib"] }  # zip decompression, faster than miniz_oxide

no_std_io = { version = "0.6", default-features = false, features = ["alloc"] }     # no_std io traits
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher"] }

[dev-dependencies]
image = { version = "0.25.2", default-features = false }         # used to convert one exr to some pngs

bencher = "0.1.5"
walkdir = "2.3.2"         # automatically test things for all files in a directory
rand = "0.8.5"            # used for fuzz testing
rayon = "1.5.3"           # run tests for many files in parallel

[features]
default = []

std = ["lebe/std", "zune-inflate/std", "no_std_io/std"]

# rayon is used for parallel compression (requires std)
rayon = ["dep:rayon-core", "std"]

[[example]]
name = "0a_write_rgba"
required-features = ["std"]

[[example]]
name = "0b_read_meta"
required-features = ["std"]

[[example]]
name = "0c_read_rgba"
required-features = ["std"]

[[example]]
name = "1a_write_rgba_with_metadata"
required-features = ["std"]

[[example]]
name = "1b_convert_exr_to_png"
required-features = ["std"]

[[example]]
name = "2_rgba_adjust_exposure"
required-features = ["std"]

[[example]]
name = "3a_write_dynamic_channels_with_metadata"
required-features = ["std"]

[[example]]
name = "3b_read_all_channels_with_metadata"
required-features = ["std"]

[[example]]
name = "4a_write_custom_fixed_channels"
required-features = ["std"]

[[example]]
name = "4b_read_custom_fixed_channels"
required-features = ["std"]

[[example]]
name = "5a_write_multiple_layers"
required-features = ["std"]

[[example]]
name = "5b_extract_exr_layers_as_pngs"
required-features = ["std"]

[[example]]
name = "5c_write_mip_maps"
required-features = ["std"]

[[example]]
name = "5d_write_legacy_layers"
required-features = ["std"]

[[example]]
name = "6_extract_mip_map_pngs"
required-features = ["std"]

[[example]]
name = "7_crop_alpha_any_image"
required-features = ["std"]

[[example]]
name = "7_crop_alpha_rgba"
required-features = ["std"]

[[example]]
name = "7_write_raw_blocks"
required-features = ["std", "rayon"]

[[example]]
name = "8_read_raw_blocks"
required-features = ["std", "rayon"]

[[bench]]
name = "read"
harness = false
required-features = ["std", "rayon"]

[[bench]]
name = "profiling"
harness = false
required-features = ["std", "rayon"]

[[bench]]
name = "write"
harness = false
required-features = ["std", "rayon"]

[[bench]]
name = "pixel_format_conversion"
harness = false
required-features = ["std", "rayon"]

# recommended release settings for max runtime performance
[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1

# test with fast runtime speed and slow build speed
[profile.dev]
incremental = true
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true
lto = true

# test with fast runtime speed and moderate build speed
[profile.test]
incremental = true
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true
lto = true

# bench with fastest runtime speed
[profile.bench]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
debug = true
codegen-units = 1
